fix: nav z-index

--- a/templatesBasics/forumApp/staticfiles/css/nav.css
+++ b/templatesBasics/forumApp/staticfiles/css/nav.css
@@ -1,9 +1,11 @@
+
 *, *:after, *:before {
   box-sizing: border-box;
 }
 
 ul.menu {
   position: fixed;
+  z-index: 1000;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-style: normal;
